soc: qemu: virt_riscv: add AIA-enabled RV32 SoC variant
Add qemu_virt_riscv32_aia SoC variant with AIA interrupt controller
support for QEMU's virt machine.

Configuration:
- RISC-V RV32IMAC with AIA extension
- APLIC-MSI + IMSIC interrupt controllers
- Memory-mapped MSI delivery mode
- Compatible with QEMU virt machine AIA implementation

This SoC variant enables testing and development of AIA-based interrupt
handling in QEMU emulation.

Signed-off-by: Afonso Oliveira <afonso.oliveira@synopsys.com>

--- a/soc/qemu/virt_riscv/Kconfig
+++ b/soc/qemu/virt_riscv/Kconfig
@@ -16,3 +16,6 @@ if SOC_FAMILY_QEMU_VIRT_RISCV
 rsource "*/Kconfig"
 
 endif # SOC_FAMILY_QEMU_VIRT_RISCV
+
+# AIA variant outside family to avoid PLIC dependency
+rsource "qemu_virt_riscv32_aia/Kconfig"
