--- a/lib/libc/common/Kconfig
+++ b/lib/libc/common/Kconfig
@@ -107,9 +107,9 @@ config COMMON_LIBC_STRNLEN
 config COMMON_LIBC_THRD
 	bool "C11 <threads.h> API support"
 	depends on DYNAMIC_THREAD
-	# Note: the POSIX_API dependency is only necessary until common elements
+	# Note: the POSIX_THREADS dependency is only necessary until common elements
 	# of C11 threads and POSIX API can be abstracted out to a common library.
-	depends on POSIX_API
+	depends on POSIX_THREADS
 	default y
 	help
 	  Common implementation of C11 <threads.h> API.
