manifest: bump hostap version that fixes implicit declarations
Include standard headers for POSIX types and functions instead of making
implicit declarations.

Signed-off-by: Chris Friedt <cfriedt@tenstorrent.com>

--- a/west.yml
+++ b/west.yml
@@ -286,7 +286,7 @@ manifest:
         - hal
     - name: hostap
       path: modules/lib/hostap
-      revision: 3ec675be30c25b56cc0e7dbd5bd931a87d32937e
+      revision: refs/pull/108/head
     - name: liblc3
       revision: 48bbd3eacd36e99a57317a0a4867002e0b09e183
       path: modules/lib/liblc3
