boards: nsim: arc_v: rhx100: Disable logging for semihosting compatibility
Disable CONFIG_LOG in the rhx100 board default configuration to ensure
semihosting console works properly. When logging is enabled with deferred
mode (the default), printk() output gets buffered by the logging subsystem
and doesn't flush properly to the semihosting console.

Also enable semihosting in the simulator properties file and update the
philosophers sample to work with semihosting by enabling stdout console
and adding a delay before main() exits.

Changes:
- Disable CONFIG_LOG in rhx100_defconfig
- Update rhx100.props to enable nsim_semihosting
- Enable CONFIG_STDOUT_CONSOLE in philosophers sample
- Add k_sleep() in philosophers main to allow output

Tested with: nsimdrv -propsfile boards/snps/nsim/arc_v/support/rhx100.props build/zephyr/zephyr.elf

Samples verified working: hello_world, philosophers, synchronization

--- a/samples/philosophers/prj.conf
+++ b/samples/philosophers/prj.conf
@@ -1,5 +1,8 @@
-CONFIG_STDOUT_CONSOLE=n
+CONFIG_STDOUT_CONSOLE=y
 CONFIG_MP_MAX_NUM_CPUS=1
 
 #Enable thread awareness for debugging tools supporting it
 CONFIG_DEBUG_THREAD_INFO=y
+
+# Keep main thread alive for philosophers to run
+CONFIG_MAIN_THREAD_PRIORITY=0
