--- a/boards/qemu/riscv32/qemu_riscv32_qemu_virt_riscv32.dts
+++ b/boards/qemu/riscv32/qemu_riscv32_qemu_virt_riscv32.dts
@@ -1,4 +1,7 @@
-/* SPDX-License-Identifier: Apache-2.0 */
+/*
+ * Copyright (c) 2025 Synopsys, Inc.
+ * SPDX-License-Identifier: Apache-2.0
+ */
 
 /dts-v1/;
 
