boards: qemu: riscv32: add AIA board variants
Add RISC-V32 AIA board variants for QEMU while maintaining backward
compatibility.

New board variants:
- qemu_riscv32/qemu_virt_riscv32_aia (AIA single-core)
- qemu_riscv32/qemu_virt_riscv32_aia/smp (AIA SMP)

Board infrastructure updates:
- Rename base board files to multi-SoC naming convention
- Add qemu_riscv32_qemu_virt_riscv32.dts (PLIC variant)
- Add qemu_riscv32_qemu_virt_riscv32_smp.dts (PLIC SMP variant)
- Update board.cmake for multi-SoC QEMU launches with correct machine
  and interrupt controller options
- Update board.yml to declare all SoC variants
- Set correct board identifiers per Zephyr conventions

AIA boards define APLIC-MSI and IMSIC interrupt controllers directly,
leveraging the refactored DTS structure that eliminated PLIC from the
base dtsi.

Signed-off-by: Afonso Oliveira <afonsoo@synopsys.com>

--- a/boards/qemu/riscv32/qemu_riscv32_qemu_virt_riscv32.yaml
+++ b/boards/qemu/riscv32/qemu_riscv32_qemu_virt_riscv32.yaml
@@ -1,5 +1,5 @@
-identifier: qemu_riscv32/qemu_riscv32/smp
-name: QEMU Emulation for RISC-V 32-bit SMP
+identifier: qemu_riscv32/qemu_virt_riscv32
+name: QEMU Emulation for RISC-V 32-bit
 type: qemu
 simulation:
   - name: qemu
@@ -8,7 +8,6 @@ toolchain:
   - zephyr
 supported:
   - netif
-  - smp
 ram: 262144
 flash: 32768
 testing:
