test: shell: add flash_before=true for shell tests
Add pytest_args: [--flash-before=true] to shell test scenarios to fix
USB reset issues that occur after flashing. Some ARC platforms
experience serial port disconnection during flash, requiring
flash-before behavior to establish proper communication.

The flash_before flag is only applied to specific test scenarios that
need it, avoiding impact on other tests that depend
on early boot logs.

Split shell test scenarios into architecture-specific versions:
- Original scenarios exclude ARC platforms (no flash-before flag)
- New .flash_before scenarios target ARC only (with flash-before flag)

Signed-off-by: Mohamed Moawad <moawad@synopsys.com>

--- a/samples/subsys/shell/shell_module/sample.yaml
+++ b/samples/subsys/shell/shell_module/sample.yaml
@@ -8,11 +8,20 @@ tests:
     filter: CONFIG_SERIAL and dt_chosen_enabled("zephyr,shell-uart")
     tags: shell
     harness: shell
+    arch_exclude: arc
     min_ram: 40
     integration_platforms:
       - native_sim
     extra_configs:
       - arch:posix:CONFIG_UART_NATIVE_PTY_0_ON_STDINOUT=y
+  sample.shell.shell_module.flash_before:
+    filter: CONFIG_SERIAL and dt_chosen_enabled("zephyr,shell-uart")
+    tags: shell
+    harness: shell
+    arch_allow: arc
+    harness_config:
+      pytest_args: [--flash-before=true]
+    min_ram: 40
   sample.shell.shell_module.usb:
     depends_on: usbd
     tags:
