--- a/samples/sensor/sensor_shell/sample.yaml
+++ b/samples/sensor/sensor_shell/sample.yaml
@@ -20,12 +20,22 @@ tests:
     filter: CONFIG_SERIAL and dt_chosen_enabled("zephyr,shell-uart")
     min_ram: 40
     harness: pytest
+    arch_exclude: arc
     timeout: 180
     extra_configs:
       - arch:posix:CONFIG_UART_NATIVE_PTY_0_ON_STDINOUT=y
     extra_args: DTC_OVERLAY_FILE=fake_sensor.overlay
     integration_platforms:
       - native_sim
+  sample.sensor.shell.pytest.flash_before:
+    filter: CONFIG_SERIAL and dt_chosen_enabled("zephyr,shell-uart")
+    min_ram: 40
+    harness: pytest
+    arch_allow: arc
+    harness_config:
+      pytest_args: [--flash-before=true]
+    timeout: 180
+    extra_args: DTC_OVERLAY_FILE=fake_sensor.overlay
   sample.sensor.shell.shields:
     platform_allow:
       - adafruit_qt_py_rp2040/rp2040
